spade-tests/src/snapshots/spade_tests__usefulness__tests__single_missing_enum_branch_errors.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B,
}

fn uwu(x: X) -> bool {
    match x {
        X::A => true,
    }
}


error: Non-exhaustive match: pattern X::B not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         X::A => true,
9 │ │     }
  │ ╰─────^ pattern X::B not covered


