spade-tests/src/snapshots/spade_tests__usefulness__tests__struct_missing_pattern_message_is_good.snap
---
source: spade-tests/src/usefulness.rs
---
    struct A {
        x: bool,
        y: bool,
    }
fn test(in: A) -> bool {
    match in {
        A(true, true) => true
    }
}


error: Non-exhaustive match: patterns A(x: false, y: false), A(x: false, y: true) and 1 more not covered
  ┌─ testinput:6:5
  │  
6 │ ╭     match in {
7 │ │         A(true, true) => true
8 │ │     }
  │ ╰─────^ patterns A(x: false, y: false), A(x: false, y: true) and 1 more not covered


