spade-tests/src/snapshots/spade_tests__usefulness__tests__zero_more_not_covered_should_not_be_present.snap
---
source: spade-tests/src/usefulness.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Non-exhaustive match: patterns (false, true, false), (true, false, false) and 2 more not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match in {
3 │ │         (true, true, true) => true,
4 │ │         (false, true, true) => true,
5 │ │         (false, false, true) => true,
6 │ │         (false, false, false) => true,
7 │ │     }
  │ ╰─────^ patterns (false, true, false), (true, false, false) and 2 more not covered


